--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,500;0,700;1,300&family=Righteous&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Quicksand&display=swap" rel="stylesheet">
+
 <script src="https://kit.fontawesome.com/d805afd56f.js" crossorigin="anonymous"></script>
 </head>
 <body>
